--- a/.config/.terraform-docs.yml
+++ b/.config/.terraform-docs.yml
@@ -1,3 +1,5 @@
+header-from: ./.config/header.md
+
 version: ""
 
 formatter: markdown table
@@ -5,6 +7,8 @@ formatter: markdown table
 name: terraform-aws-iam-role-vmimport
 
 content: |-
+  {{ .Header }}
+
   # terraform-aws-iam-role-vmimport
   GitHub: [StratusGrid/terraform-aws-iam-role-vmimport](https://github.com/StratusGrid/terraform-aws-iam-role-vmimport)
   ## Example
@@ -51,6 +55,7 @@ content: |-
   Note, manual changes to the README will be overwritten when the documentation is updated. To update the documentation, run `terraform-docs -c .config/.terraform-docs.yml`
 sections:
   show:
+    - header
     - requirements
     - resources
     - inputs
